--- a/composer.json
+++ b/composer.json
@@ -42,10 +42,7 @@
         "phpunit/phpunit": "~4.0"
     },
     "autoload": {
-        "psr-0": { "Thin": "" },
-        "files": [
-            "Helper.php"
-        ]
+        "psr-4": { "Thin": "" }
     },
     "suggest": {
         "doctrine/dbal": "Allow renaming columns and dropping SQLite columns.",
